level 2 for age menu

--- a/index.html
+++ b/index.html
@@ -4,20 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="css/hbmenu.css">
 </head>
 <body>
     
-    <nav class="mega-menu">
-        <a href="" class="level-1">home</a>
-        <a href="" class="level-1 have-children">about us</a>
-        <a href="" class="level-1 have-children">age</a>
-        <a href="" class="level-1 have-children">category</a>
-        <a href="" class="level-1 have-children">brand</a>
-        <a href="" class="level-1 have-children">colour</a>
-        <a href="" class="level-1 have-children">gift</a>
-        <a href="" class="level-1 have-children">promo</a>
-        <a href="" class="level-1 have-children">official store</a>
-    </nav>
+    <ul class="mega-menu">
+        <li class="level-1 have-children desktop-only">
+            <a href="" class="">home</a>
+        </li>
+        <li class="level-1 have-children desktop-only">
+            <a href="" class="">about us</a>
+        </li>
+        <li class="level-1 have-children">
+            <a href="" class="">age</a>
+            <ul class="level-2-container">
+                <li>
+                    <a href="">otw (pregnancy)</a>
+                </li>
+                <li>
+                    <a href="">0 - 6 months</a>
+                </li>
+                <li>
+                    <a href="">6 - 12 months</a>
+                </li>
+                <li>
+                    <a href="">12 - 18 months</a>
+                </li>
+                <li>
+                    <a href="">18 - 24 months</a>
+                </li>
+                <li>
+                    <a href="">> 24 months</a>
+                </li>
+            </ul>
+        </li>
+        <li class="level-1 have-children">
+            <a href="" class="">category</a>
+        </li>
+        <li class="level-1 have-children">
+            <a href="" class="">brand</a>
+        </li>
+        <li class="level-1 have-children">
+            <a href="" class="">colour</a>
+        </li>
+        <li class="level-1 have-children">
+            <a href="" class="">gift</a>
+        </li>
+        <li class="level-1 have-children">
+            <a href="" class="">promo</a>
+        </li>
+        <li class="level-1 have-children">
+            <a href="" class="">official store</a>
+        </li>
+    </ul>
 
 
 </body>
