level 3 for category menu

--- a/index.html
+++ b/index.html
@@ -18,29 +18,81 @@
         </li>
         <li class="level-1 have-children">
             <a href="" class="">age</a>
-            <ul class="level-2-container">
-                <li>
+            <ul class="level-2-container w280">
+                <li class="level-2">
                     <a href="">otw (pregnancy)</a>
                 </li>
-                <li>
+                <li class="level-2">
                     <a href="">0 - 6 months</a>
                 </li>
-                <li>
+                <li class="level-2">
                     <a href="">6 - 12 months</a>
                 </li>
-                <li>
+                <li class="level-2">
                     <a href="">12 - 18 months</a>
                 </li>
-                <li>
+                <li class="level-2">
                     <a href="">18 - 24 months</a>
                 </li>
-                <li>
+                <li class="level-2">
                     <a href="">> 24 months</a>
                 </li>
             </ul>
         </li>
         <li class="level-1 have-children">
             <a href="" class="">category</a>
+            <ul class="level-2-container w280">
+                <li class="level-2 have-children">
+                    <a href="">milk</a>
+                    <ul class="level-3-container">
+                        <li class="level-3">
+                            <a href="">Infant</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Growing Up</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Speciality Milk</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">For Mom</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="level-2 have-children">
+                    <a href="">diapers</a>
+                </li>
+                <li class="level-2 have-children">
+                    <a href="">baby food</a>
+                </li>
+                <li class="level-2 have-children">
+                    <a href="">bath & skincare</a>
+                </li>
+                <li class="level-2 have-children">
+                    <a href="">health & safety</a>
+                </li>
+                <li class="level-2 have-children">
+                    <a href="">feeding</a>
+                </li>
+                <li class="level-2 have-children">
+                    <a href="">fashion</a>
+                </li>
+                <li class="level-2 have-children">
+                    <a href="">bedding & decor</a>
+                </li>
+                <li class="level-2 have-children">
+                    <a href="">gear & furniture</a>
+                </li>
+                <li class="level-2 have-children">
+                    <a href="">toy & learning</a>
+                </li>
+                <li class="level-2 have-children">
+                    <a href="">for mom</a>
+                </li>
+                <li class="level-2 have-children">
+                    <a href="">hampers</a>
+                </li>
+            </ul>
         </li>
         <li class="level-1 have-children">
             <a href="" class="">brand</a>
