body, gift, color

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <ul class="mega-menu">
+    <ul class="header-menu">
         <li class="level-1 have-children desktop-only">
             <a href="" class="">home</a>
         </li>
@@ -96,12 +96,98 @@
         </li>
         <li class="level-1 have-children">
             <a href="" class="">brand</a>
+            <div class="level-2-container columns">
+                <div class="column">
+                    <a href="">
+                        See All Brands
+                    </a>
+                </div>
+                <div class="column">
+                    <a href="">
+                        food & Nutrition
+                    </a>
+                    <div class="lists">
+                        <a href="">Bebelac</a>
+                        <a href="">Nutrilon</a>
+                        <a href="">Enfa</a>
+                        <a href="">S-26</a>
+                        <a href="">Frisian Flag</a>
+                        <a href="">Dancow</a>
+                        <a href="">Pediasure</a>
+                        <a href="">Heinz</a>
+                        <a href="">Pure Green</a>
+                        <a href="">SGM</a>
+                    </div>
+                </div>
+                <div class="column">
+                    <a href="">
+                        Diapers
+                    </a>
+                    <div class="lists">
+                        <a href="">Mamy Poko</a>
+                        <a href="">Merries</a>
+                        <a href="">Nepia</a>
+                        <a href="">Goo.n</a>
+                        <a href="">Pampers</a>
+                        <a href="">Sweety</a>
+                        <a href="">Pigeon</a>
+                        <a href="">Puku</a>
+                        <a href="">Lynea</a>
+                        <a href="">Fitti</a>
+                    </div>
+                </div>
+                <div class="column">
+                    <a href="">
+                        Feeding
+                    </a>
+                    <div class="lists">
+                        <a href="">Avent</a>
+                        <a href="">Pigeon</a>
+                        <a href="">Dr. Brown</a>
+                        <a href="">Munchkin</a>
+                        <a href="">Boon</a>
+                        <a href="">Doidy Cup</a>
+                        <a href="">Medela</a>
+                        <a href="">Tommee Tippee</a>
+                        <a href="">Puku</a>
+                        <a href="">Takahi</a>
+                    </div>
+                </div>
+            </div>
         </li>
         <li class="level-1 have-children">
             <a href="" class="">colour</a>
+            <div class="level-2-container columns">
+                <div class="column">
+                    <a href="">
+                        Bluesky Baby Stuff
+                    </a>
+                </div>
+                <div class="column">
+                    <a href="">
+                        Pink Baby Stuff
+                    </a>
+                </div>
+                <div class="column">
+                    <a href="">
+                        Yellow Baby Stuff
+                    </a>
+                </div>
+            </div>
         </li>
         <li class="level-1 have-children">
             <a href="" class="">gift</a>
+            <ul class="level-2-container w280">
+                <li class="level-2">
+                    <a href="">gift set</a>
+                </li>
+                <li class="level-2">
+                    <a href="">gift diapers package</a>
+                </li>
+                <li class="level-2">
+                    <a href="">gift card</a>
+                </li>
+            </ul>
         </li>
         <li class="level-1 have-children">
             <a href="" class="">promo</a>
