--- a/index.html
+++ b/index.html
@@ -9,6 +9,34 @@
 </head>
 <body>
     
+<header>
+
+    <div class="top">
+        <span class="right">
+            Mega Mall Ayani Blok B No.12-15, Jalan Jenderal Ahmad Yani, Pontianak, Kalimantan Barat
+        </span>
+    </div>
+    <div class="middle">
+        <nav class="account-menu">
+            <a href="">My Account</a>
+            <a href="">My Wish List</a>
+            <a href="">Masuk</a>
+            <a href="">Compare</a>
+            <a href="">
+                <img src="img/shopping_cart-24px.svg" alt="">
+            </a>
+        </nav>
+        <div class="search-container">
+            <input type="search" name="" id="" placeholder="Search entire store here ...">
+            <button>
+                <img src="img/search-24px.svg" alt="">
+            </button>
+        </div>
+        <div class="logo-container">
+            <img src="img/logohb.png" alt="">
+        </div>
+    </div>
+
     <ul class="header-menu">
         <li class="level-1 have-children desktop-only">
             <a href="" class="">home</a>
@@ -197,6 +225,7 @@
         </li>
     </ul>
 
+</header>
 
 </body>
 </html>
