--- a/index.html
+++ b/index.html
@@ -11,13 +11,28 @@
     
 <header>
 
+    <input type="checkbox" name="" class="main-thumb-menu" id="menu-1">
+    <input type="checkbox" name="" class="main-thumb-menu" id="menu-2">
+    <input type="checkbox" name="" class="main-thumb-menu" id="menu-3">
+    <input type="checkbox" name="" class="main-thumb-menu" id="menu-4">
+
+    <div class="mobile-logo mobile-only">
+        <img src="img/logohb.png" alt="">
+    </div>
+    <nav class="main-menu mobile-only">
+        <label for="menu-1" class="main-thumb-menu-label"><img src="img/menu-24px.svg" alt=""></label>
+        <label for="menu-2" class="main-thumb-menu-label"><img src="img/search-24px.svg" alt=""></label>
+        <label for="menu-3" class="main-thumb-menu-label"><img src="img/face-24px.svg" alt=""></label>
+        <label for="menu-4" class="main-thumb-menu-label"><img src="img/shopping_cart-24px.svg" alt=""></label>
+    </nav>
+
     <div class="top">
-        <span class="right">
+        <span class="right desktop-only">
             Mega Mall Ayani Blok B No.12-15, Jalan Jenderal Ahmad Yani, Pontianak, Kalimantan Barat
         </span>
     </div>
     <div class="middle">
-        <nav class="account-menu">
+        <nav class="account-menu desktop-only">
             <a href="">My Account</a>
             <a href="">My Wish List</a>
             <a href="">Masuk</a>
@@ -32,7 +47,7 @@
                 <img src="img/search-24px.svg" alt="">
             </button>
         </div>
-        <div class="logo-container">
+        <div class="logo-container desktop-only">
             <img src="img/logohb.png" alt="">
         </div>
     </div>
