menu 1 2 3 done, 1 bugs on multi level

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     
+<div class="mobile-logo mobile-only">
+    <img src="img/logohb.png" alt="">
+</div>
+
 <header>
 
     <input type="checkbox" name="" class="main-thumb-menu" id="menu-1">
@@ -16,9 +20,6 @@
     <input type="checkbox" name="" class="main-thumb-menu" id="menu-3">
     <input type="checkbox" name="" class="main-thumb-menu" id="menu-4">
 
-    <div class="mobile-logo mobile-only">
-        <img src="img/logohb.png" alt="">
-    </div>
     <nav class="main-menu mobile-only">
         <label for="menu-1" class="main-thumb-menu-label"><img src="img/menu-24px.svg" alt=""></label>
         <label for="menu-2" class="main-thumb-menu-label"><img src="img/search-24px.svg" alt=""></label>
@@ -32,12 +33,12 @@
         </span>
     </div>
     <div class="middle">
-        <nav class="account-menu desktop-only">
+        <nav class="account-menu">
             <a href="">My Account</a>
             <a href="">My Wish List</a>
             <a href="">Masuk</a>
             <a href="">Compare</a>
-            <a href="">
+            <a href="" class="desktop-only">
                 <img src="img/shopping_cart-24px.svg" alt="">
             </a>
         </nav>
