expander for 2nd level, not fixed yet for brand and color

--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
         </li>
         <li class="level-1 have-children">
             <a href="" class="">age</a>
+            <label for="l1-age" class="expand-sign">&#8964;</label>
+            <input type="checkbox" id="l1-age" class="menu-children-expand">
             <ul class="level-2-container w280">
                 <li class="level-2">
                     <a href="">otw (pregnancy)</a>
@@ -96,6 +98,8 @@
         </li>
         <li class="level-1 have-children">
             <a href="" class="">category</a>
+            <label for="l1-category" class="expand-sign">&#8964;</label>
+            <input type="checkbox" id="l1-category" class="menu-children-expand">
             <ul class="level-2-container w280">
                 <li class="level-2 have-children">
                     <a href="">milk</a>
@@ -151,6 +155,8 @@
         </li>
         <li class="level-1 have-children">
             <a href="" class="">brand</a>
+            <label for="l1-brand" class="expand-sign">&#8964;</label>
+            <input type="checkbox" id="l1-brand" class="menu-children-expand">
             <div class="level-2-container columns">
                 <div class="column">
                     <a href="">
@@ -212,6 +218,8 @@
         </li>
         <li class="level-1 have-children">
             <a href="" class="">colour</a>
+            <label for="l1-colour" class="expand-sign">&#8964;</label>
+            <input type="checkbox" id="l1-colour" class="menu-children-expand">
             <div class="level-2-container columns">
                 <div class="column">
                     <a href="">
@@ -232,6 +240,8 @@
         </li>
         <li class="level-1 have-children">
             <a href="" class="">gift</a>
+            <label for="l1-gift" class="expand-sign">&#8964;</label>
+            <input type="checkbox" id="l1-gift" class="menu-children-expand">
             <ul class="level-2-container w280">
                 <li class="level-2">
                     <a href="">gift set</a>
