shopping cart container on mobile and desktop, fixed top and label bugs

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             <a href="">My Wish List</a>
             <a href="">Masuk</a>
             <a href="">Compare</a>
-            <a href="" class="desktop-only">
+            <label for="menu-4" class="desktop-only">
                 <img src="img/shopping_cart-24px.svg" alt="">
-            </a>
+            </label>
         </nav>
         <div class="search-container">
             <input type="search" name="" id="" placeholder="Search entire store here ...">
@@ -61,6 +61,10 @@
         </div>
         <div class="logo-container desktop-only">
             <img src="img/logohb.png" alt="">
+        </div>
+        <div class="shopping-cart-container">
+    
+            <label for="menu-4" class="close-cart">&#128473;</label>
         </div>
     </div>
 
@@ -262,6 +266,7 @@
         </li>
     </ul>
 
+    
 </header>
 
 </body>
