top badges DONE

--- a/index.html
+++ b/index.html
@@ -39,6 +39,20 @@
     </script>
 
     <div class="top">
+        <div class="top-badges">
+            <a href="" class="badge-wa">
+                <img src="img/logo-whatsapp.svg" alt="">
+                <span>chat us</span>
+            </a>
+            <a href="" class="badge-gc">
+                <img src="img/card_giftcard-24px.svg" alt="">
+                <span>baby gift</span>
+            </a>
+            <a href="" class="badge-ig">
+                <img src="img/logo-instagram.svg" alt="">
+                <span>follow us</span>
+            </a>
+        </div>
         <span class="right desktop-only">
             Mega Mall Ayani Blok B No.12-15, Jalan Jenderal Ahmad Yani, Pontianak, Kalimantan Barat
         </span>
