added all Category menu items

--- a/index.html
+++ b/index.html
@@ -127,36 +127,196 @@
                 </li>
                 <li class="level-2 have-children">
                     <a href="">diapers</a>
+                    <ul class="level-3-container">
+                        <li class="level-3">
+                            <a href="">Disposable Diapers</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Reusable Diapers</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Diapers Accessories</a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="level-2 have-children">
                     <a href="">baby food</a>
+                    <ul class="level-3-container">
+                        <li class="level-3">
+                            <a href="">Cereal & Multigrains</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Snack & Juice</a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="level-2 have-children">
                     <a href="">bath & skincare</a>
+                    <ul class="level-3-container">
+                        <li class="level-3">
+                            <a href="">Body & Wash</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Body & Hair Care</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Growing & Oral Care</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Parfums & Cologne</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">View All</a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="level-2 have-children">
                     <a href="">health & safety</a>
+                    <ul class="level-3-container">
+                        <li class="level-3">
+                            <a href="">Supplement & Medicines</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Wipes</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Detergent & Cleansers</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Hand Soap & Sanitizer</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">View All</a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="level-2 have-children">
                     <a href="">feeding</a>
+                    <ul class="level-3-container">
+                        <li class="level-3">
+                            <a href="">Bottles & Nipple</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Bowl, Plate, Spoon</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Cup & Sipper</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Lunch Box & Food Storage</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">View All</a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="level-2 have-children">
                     <a href="">fashion</a>
+                    <ul class="level-3-container">
+                        <li class="level-3">
+                            <a href="">Top</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Bottom</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Clothing Set</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Mitten & Booties</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">View All</a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="level-2 have-children">
                     <a href="">bedding & decor</a>
+                    <ul class="level-3-container">
+                        <li class="level-3">
+                            <a href="">Pillow & Bolster</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Bedding</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Blanket</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Waterproof Sheet</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Decor</a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="level-2 have-children">
                     <a href="">gear & furniture</a>
+                    <ul class="level-3-container">
+                        <li class="level-3">
+                            <a href="">Baby Carrier</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Diaper Bag</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Bag</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Stroller & Baby Walker</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">View All</a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="level-2 have-children">
                     <a href="">toy & learning</a>
+                    <ul class="level-3-container">
+                        <li class="level-3">
+                            <a href="">Pacifier & Teether</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Music & Sound</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Rattle & Plush Toys</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Bath & Swim Toys</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">View All</a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="level-2 have-children">
                     <a href="">for mom</a>
+                    <ul class="level-3-container">
+                        <li class="level-3">
+                            <a href="">Breastfeeding</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Body & Hair Care</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Vitamins & Healthcare</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">Maternity & Sanitary Pads</a>
+                        </li>
+                        <li class="level-3">
+                            <a href="">View All</a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="level-2 have-children">
                     <a href="">hampers</a>
+                    <ul class="level-3-container">
+                        <li class="level-3">
+                            <a href="">Hampers</a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </li>
