--- a/index.html
+++ b/index.html
@@ -326,13 +326,19 @@
             <input type="checkbox" id="l1-brand" class="menu-children-expand">
             <div class="level-2-container columns">
                 <div class="column">
-                    <a href="">
-                        See All Brands
+                    <a href="" class="menu-banner">
+                        <img src="img/allbrands-new.jpg" alt="">
+                        <span>
+                            See All Brands
+                        </span>
                     </a>
                 </div>
                 <div class="column">
-                    <a href="">
-                        food & Nutrition
+                    <a href="" class="menu-banner">
+                        <img src="img/FOOD AND NUTRITION-NEW.jpg" alt="">
+                        <span>
+                            food & Nutrition
+                        </span>
                     </a>
                     <div class="lists">
                         <a href="">Bebelac</a>
@@ -348,8 +354,11 @@
                     </div>
                 </div>
                 <div class="column">
-                    <a href="">
-                        Diapers
+                    <a href="" class="menu-banner">
+                        <img src="img/diapers-new.jpg" alt="">
+                        <span>
+                            Diapers
+                        </span>
                     </a>
                     <div class="lists">
                         <a href="">Mamy Poko</a>
@@ -365,8 +374,11 @@
                     </div>
                 </div>
                 <div class="column">
-                    <a href="">
-                        Feeding
+                    <a href="" class="menu-banner">
+                        <img src="img/feeding-new.jpg" alt="">
+                        <span>
+                            Feeding
+                        </span>
                     </a>
                     <div class="lists">
                         <a href="">Avent</a>
@@ -389,18 +401,27 @@
             <input type="checkbox" id="l1-colour" class="menu-children-expand">
             <div class="level-2-container columns">
                 <div class="column">
-                    <a href="">
-                        Bluesky Baby Stuff
+                    <a href="" class="menu-banner">
+                        <img src="img/BLUE BABY STUFF-NEW.jpg" alt="">
+                        <span>
+                            Bluesky Baby Stuff
+                        </span>
                     </a>
                 </div>
                 <div class="column">
-                    <a href="">
-                        Pink Baby Stuff
+                    <a href="" class="menu-banner">
+                        <img src="img/PINKISH BANNER-NEW.jpg" alt="">
+                        <span>
+                            Pink Baby Stuff
+                        </span>
                     </a>
                 </div>
                 <div class="column">
-                    <a href="">
-                        Yellow Baby Stuff
+                    <a href="" class="menu-banner">
+                        <img src="img/YELLOW BABY STUFF-NEW.jpg" alt="">
+                        <span>
+                            Yellow Baby Stuff
+                        </span>
                     </a>
                 </div>
             </div>
