--- a/index.html
+++ b/index.html
@@ -466,18 +466,18 @@
     let scrollpos = window.scrollY
     const header = document.querySelector(".header-menu")
     const badges = document.querySelector(".top-badges")
-    // const mainmenu = document.querySelector(".main-menu")
+    const mainmenu = document.querySelector(".main-menu")
     const header_height = 140
 
     const add_class_on_scroll = () => {
         header.classList.add("sticky")
         badges.classList.add("scrolled")
-        // mainmenu.classList.add("sticky")
+        mainmenu.classList.add("sticky")
     }
     const remove_class_on_scroll = () => {
         header.classList.remove("sticky")
         badges.classList.remove("scrolled")
-        // mainmenu.classList.remove("sticky")
+        mainmenu.classList.remove("sticky")
     }
 
     window.addEventListener('scroll', function() { 
